--- a/Schach_oder_Dame.vcxproj
+++ b/Schach_oder_Dame.vcxproj
@@ -157,13 +157,10 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Checker_Stone.h" />
     <ClInclude Include="fltk.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GUI.h" />
-    <ClInclude Include="Matrix.h" />
-    <ClInclude Include="Matrix11.h" />
-    <ClInclude Include="MatrixIO.h" />
-    <ClInclude Include="MatrixIO11.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Simple_window.h" />
     <ClInclude Include="std_lib_facilities.h" />
