--- a/Schach_oder_Dame.vcxproj
+++ b/Schach_oder_Dame.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Graph.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="Rules_window.h" />
     <ClInclude Include="Simple_window.h" />
     <ClInclude Include="std_lib_facilities.h" />
     <ClInclude Include="Window.h" />
