--- a/Schach_oder_Dame.vcxproj.filters
+++ b/Schach_oder_Dame.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="std_lib_facilities.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Rules_window.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
